# Razed

./: Cargo.toml
exapp/: Cargo.toml
exapp/shaders/: base.fsh  base.vsh  constraint.vsh  fragment.vsh  line.vsh  solid.fsh
exapp/src/: data.rs  main.rs  render.rs  state.rs
exapp/src/state/: mod.rs  physics.rs
exapp/src/state/physics/: mod.rs  rotor.rs
exapp/src/structure/: fragment.rs  mod.rs
physics/: Cargo.toml
physics/src/: lib.rs  xpbd.rs
