[package]
name = "exapp"
version = "0.1.0"
edition = "2024"

[dependencies]
ethel = { path = "../../ethel" }
glam = "0.31.0"
janus = { path = "../../janus", features = ["expose_gl", "state", "render", "input"] }
log = "0.4.29"
paste = "1.0.15"
rand = "0.10.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
