[package]
name = "exapp"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = false
panic = "abort"

[dependencies]
janus = { path = "../../janus", features = ["expose_gl", "render", "input"] }
ethel = { path = "../../ethel" }
physics = { path = "../physics" }
glam = "=0.31.0"
log = "0.4.29"
paste = "1.0.15"
rand = "0.10.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rustc-hash = "2.1.1"
